Attempt to fix title spacing

--- a/stylesheets/base/_fonts.scss
+++ b/stylesheets/base/_fonts.scss
@@ -16,7 +16,7 @@
     src: url('/fonts/Moderat-Bold.eot'); /* IE9 Compat Modes */
     src: url('/fonts/Moderat-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('/fonts/Moderat-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-         url('/fonts/Moderat-Bold.ttf')  format('truetype'),
+         url('/fonts/Moderat-Bold.ttf')  format('truetype');
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
